@@ -7,9 +7,6 @@ import edu.colorado.phet.common.phetcommon.application.PhetApplicationConfig;
 import edu.colorado.phet.common.phetcommon.application.PhetApplicationLauncher;
 import edu.colorado.phet.common.piccolophet.PiccoloPhetApplication;
 import edu.colorado.phet.dilutions.dilution.DilutionModule;
-import edu.colorado.phet.dilutions.modules.BeersLawLabModule;
-import edu.colorado.phet.dilutions.modules.BeersLawModule;
-import edu.colorado.phet.dilutions.modules.MakeDilutionsModule;
 import edu.colorado.phet.dilutions.molarity.MolarityModule;
 
 /**
@@ -21,18 +18,9 @@ public class DilutionsApplication extends PiccoloPhetApplication {
 
     public DilutionsApplication( PhetApplicationConfig config ) {
         super( config );
-
         Frame frame = getPhetFrame();
         addModule( new MolarityModule( frame ) );
         addModule( new DilutionModule( frame ) );
-        addModule( new MakeDilutionsModule() );
-        addModule( new BeersLawModule() );
-        addModule( new BeersLawLabModule() );
-
-        //TODO remove this after development
-        if ( config.isDev() ) {
-            setStartModule( getModule( 1 ) );
-        }
     }
 
     public static void main( final String[] args ) {
